# ros_al5d_robot_interface

./: Doxyfile  README.md
Docs/Diagrammen/Plant/: CD.wsd  SD.wsd  SMD.wsd  TD.wsd  UCD.wsd
Docs/Documentatie/: World_Documentatie.docx
Docs/DoxyGen/html/: Command_8hpp_source.html  GoalQueueHandler_8hpp_source.html  ICommunication_8hpp_source.html  MotionPlanner_8hpp_source.html  Position_8hpp_source.html  RobotInterface_8hpp_source.html  SerialCommunication_8hpp_source.html  Servo_8hpp_source.html  States_8hpp_source.html  annotated.html  classMotionPlanner_1_1GoalQueueHandler-members.html  classMotionPlanner_1_1GoalQueueHandler.html  classMotionPlanner_1_1RobotInterface-members.html  classMotionPlanner_1_1RobotInterface.html  classRobotInterface_1_1HighLevel_1_1Command-members.html  classRobotInterface_1_1HighLevel_1_1Command.html  classRobotInterface_1_1HighLevel_1_1PositionAction-members.html  classRobotInterface_1_1HighLevel_1_1PositionAction.html  classRobotInterface_1_1HighLevel_1_1Servo-members.html  classRobotInterface_1_1HighLevel_1_1Servo.html  classRobotInterface_1_1LowLevel_1_1ICommunication-members.html  classRobotInterface_1_1LowLevel_1_1ICommunication.html  classRobotInterface_1_1LowLevel_1_1ICommunication__inherit__graph.map  classRobotInterface_1_1LowLevel_1_1ICommunication__inherit__graph.md5  classRobotInterface_1_1LowLevel_1_1SerialCommunication-members.html  classRobotInterface_1_1LowLevel_1_1SerialCommunication.html  classRobotInterface_1_1LowLevel_1_1SerialCommunication__inherit__graph.map  classes.html  files.html  functions.html  (+43 more)
world_ws/devel/: .catkin  .rosinstall  setup.sh
world_ws/src/robot_interface/: CMakeLists.txt  package.xml
world_ws/src/robot_interface/config/: Preprogrammed.ini
world_ws/src/robot_interface/msg/: Angle.msg  Configuration.msg
world_ws/src/robot_interface/src/MotionPlanner/: GoalQueueHandler.cpp  GoalQueueHandler.hpp  Main.cpp  MotionPlanner.cpp  MotionPlanner.hpp
world_ws/src/robot_interface/src/RobotInterface/HighLevel/: Command.cpp  Command.hpp  Main.cpp  Position.cpp  Position.hpp  RobotInterface.cpp  RobotInterface.hpp  Servo.cpp  Servo.hpp  States.cpp  States.hpp
world_ws/src/robot_interface/src/RobotInterface/LowLevel/: ICommunication.cpp  ICommunication.hpp  SerialCommunication.cpp  SerialCommunication.hpp
world_ws/src/robot_interface/srv/: EmergencyStop.srv
(+137 files in other folders)
